fix: resolve button text visibility and further refine rich text editor tabs

--- a/app/globals.css
+++ b/app/globals.css
@@ -4036,6 +4036,7 @@
   position: relative;
   text-align: center;
   width: 100%;
+  z-index: 1;
 }
 
 .LemonButton .LemonButton__chrome .LemonButton__content {
@@ -4145,12 +4146,12 @@
   background: var(--lemon-button-bg-color);
   border: 1px solid var(--button-border-color);
   border-radius: var(--lemon-button-radius);
-  box-shadow: 0 var(--lemon-button-chrome-depth)0-1px var(--lemon-button-frame-bg-color);
+  box-shadow: 0 var(--lemon-button-chrome-depth) 0 -1px var(--lemon-button-frame-bg-color);
   content: "";
-  inset: -1px -1px calc(var(--lemon-button-chrome-depth) - 1px);
+  inset: -1px -1px calc(var(--lemon-button-chrome-depth) * -1);
   position: absolute;
   transition: opacity .2s ease;
-  z-index: 0
+  z-index: -1;
 }
 
 .LemonButton.LemonButton--primary:not([aria-disabled=true]):active .LemonButton__chrome:after,
